2005-01-10  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bmread.c, main/dumpmine.c, main/gameseq.c, main/piggy.c:
	fix bug #1676 (filling up of OLG texture list)

2005-01-07  Alexander Zielke  <vulture@vultures-nest.de>

	* main/state.c: fix problems with copying/deleting save files

	* main/automap.c: make automap fonts transparent.

2005-01-07  Bradley Bell  <btb@icculus.org>

	* main/menu.c: In Load Level, if there is no current mission,
	select one

2005-01-05  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gameseq.c: Free polymodel data before reloading ham file.

	* arch/ogl/gr.c: Implement fading in ogl_urect()

	* main/gauges.c: Draw ship before shields in HUD.

2004-12-23  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/editor/centers.c: Use both ints with the robot producer
	flags.

2004-12-23  Bradley Bell  <btb@icculus.org>

	* main/editor/centers.c, main/editor/editor.h,
	main/editor/eswitch.c, main/editor/group.c, main/editor/med.c,
	main/editor/meddraw.c, main/editor/medwall.c, main/editor/mine.c,
	main/editor/seguvs.c, main/segment.h: Use macros to use Segment2s
	when necessary.

2004-12-21  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bmread.c: don't duplicate the period in the filename

	* main/dumpmine.c: Add function prototypes to remove warnings

	* main/dumpmine.c, ui/window.c: Specify that two functions return
	void.

	* main/editor/autosave.c, main/editor/curves.c,
	main/editor/ehostage.c, main/editor/kmine.c, main/editor/med.c,
	main/editor/medrobot.c, main/editor/mine.c: fix occurences of
	#ifdef __LINUX__

2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/editor/eobject.c, main/editor/kgame.c,
	main/editor/segment.c, main/gameseg.h, main/physics.c: Pass the
	extra two parameters to get_seg_masks.

	* main/gamemine.c, main/gamemine.h, main/gamesave.c: Enable global
	structs for mine saving functions

	* main/inferno.c: Use PhysicsFS for making the hoard ham.
