@@ -1,4 +1,4 @@
-/* $Id: collide.c,v 1.14 2004-10-09 15:59:28 schaffner Exp $ */
+/* $Id: collide.c,v 1.15 2005-01-23 13:35:16 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -77,6 +77,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #include "automap.h"
 #include "switch.h"
 #include "palette.h"
+#include "gameseq.h"
 
 #ifdef TACTILE
 #include "tactile.h"
@@ -1388,9 +1389,7 @@ int apply_damage_to_robot(object *robot, fix damage, int killer_objnum)
 
 	//	Do unspeakable hacks to make sure player doesn't die after killing boss.  Or before, sort of.
 	if (Robot_info[robot->id].boss_flag)
-#ifdef NETWORK
 		if (PLAYING_BUILTIN_MISSION && Current_level_num == Last_level)
-#endif
 			if (robot->shields < 0)
 			 {
 #ifdef NETWORK
